--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+       
+    </header>
+    <main>
+        <h1>Hello</h1>
+    </main>
     <footer></footer>
 </body>
 </html>
