put media query

--- a/index.html
+++ b/index.html
@@ -6,14 +6,40 @@
     <title>ABC Fashion</title>
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/media-query/desktop-first.css">
     <script src="js/app.js" defer></script>
 </head>
 <body>
     <header>
-       
+       <nav>
+            <a href="/" class="logo">
+                <img src="icons/logo.svg" width="40" alt="">
+                <span><span class="a">A</span><span class="b">B</span><span class="c">C</span> <strong class="logo-design">Fashion</strong></span>
+            </a>
+            <ul class="nav-items">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Shop</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <ul class="social-links">
+                <li>
+                    <a href=""><img src="icons/facebook.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="icons/instagram.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="icons/twitter.svg" alt=""></a>
+                </li>
+            </ul>
+
+            <img src="./icons/menu.svg" class="menu-icon"  alt="">
+       </nav>
     </header>
     <main>
-        <h1>Hello</h1>
+        
     </main>
     <footer></footer>
 </body>
