change icon name and modified

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <!-- nav -->
        <nav>
             <a href="/" class="logo">
                 <img src="icons/logo.svg" width="40" alt="">
@@ -37,6 +38,17 @@
 
             <img src="./icons/menu.svg" class="menu-icon"  alt="">
        </nav>
+       <!-- end nav bar -->
+
+       <!-- hero section -->
+        <div class="hero-section">
+            <div class="circle circle2"></div>
+            <div class="circle circle3"></div>
+            <div class="circle circle4"></div>
+            <div class="circle circle1"></div>
+            <div class="hero-content"></div>
+        </div>
+       <!-- end hero section--> 
     </header>
     <main>
         
